8278028: [test-library] Warnings cleanup of the test library